@@ -1,3 +1,8 @@
+2011-08-17 Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V02-04-13
+	* changes to remove circular dep between Utilities and Modules
+
 2011-07-20 Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V02-04-12
